{
    "name": "JoystickInputs",
    "maps": [
        {
            "name": "MouseJoystick",
            "id": "3d44236e-168b-4d99-85f0-198853ce2419",
            "actions": [
                {
                    "name": "RightOne",
                    "type": "Button",
                    "id": "983b64a8-ef1d-4660-b44d-f2c3e9f7c918",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "LeftOne",
                    "type": "Button",
                    "id": "fc0f4c33-5f0f-4791-9880-0ca783ae1bc7",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "RightStickUp",
                    "type": "Button",
                    "id": "5f5b8476-0974-487a-9597-0468e909326e",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "RightStickDown",
                    "type": "Button",
                    "id": "0c1bda4c-6203-4b7d-8d04-ddf63138984f",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "b6747678-d4ae-4bf5-8749-7bb0354208ab",
                    "path": "<Gamepad>/rightShoulder",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RightOne",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "2931fbdb-8945-43a2-a9f0-a516e600890d",
                    "path": "<Gamepad>/leftShoulder",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "LeftOne",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "e7cc7392-bd35-457e-a3a3-96dc0e367a55",
                    "path": "<Gamepad>/rightStick/up",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RightStickUp",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "a917a14d-11da-4e38-882d-086f8a12a215",
                    "path": "<Gamepad>/rightStick/down",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RightStickDown",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "KeyboardJoystick",
            "id": "b9e14ca5-bc31-40a3-a4f8-456323252e54",
            "actions": [
                {
                    "name": "RightTwo",
                    "type": "Button",
                    "id": "af26fddc-01a3-4864-bec1-cd5401345b2a",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "LeftTwo",
                    "type": "Button",
                    "id": "fdf52754-210c-46dd-bdea-ed641572866f",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "SouthButton",
                    "type": "Button",
                    "id": "5fd1fbc7-3084-4ed7-a528-c3f14283ccde",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "NorthButton",
                    "type": "Button",
                    "id": "0e5f07be-43f0-4776-ba44-763e573fac2e",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "EastButton",
                    "type": "Button",
                    "id": "ebeb2842-d9c9-4e11-b1a4-440e14ba8167",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "WestButton",
                    "type": "Button",
                    "id": "2342b977-e412-439d-83bb-b4fb28b90279",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "b56dc999-d533-47ee-9c71-a7bcea3b3f41",
                    "path": "<Gamepad>/rightTrigger",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RightTwo",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "678b0cc1-c854-4cfe-a060-5b80694e6e16",
                    "path": "<Gamepad>/leftTrigger",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "LeftTwo",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "473e1cd1-4893-48f3-b7a5-64128cd2b48a",
                    "path": "<Gamepad>/buttonSouth",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SouthButton",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "4b5ee8c1-6b7b-436c-a116-4c2a2464c02a",
                    "path": "<Gamepad>/buttonNorth",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "NorthButton",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "1e529b09-8484-4653-9d59-8afdc9525407",
                    "path": "<Gamepad>/buttonEast",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "EastButton",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "0dac3b2b-bb47-429d-985c-0f7d2a4e5573",
                    "path": "<Gamepad>/buttonWest",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "WestButton",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}